<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:padding="32dp"
        tools:context=".whatsapp.ui.login.LoginActivity">

    <android.support.v7.widget.CardView android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:background="@color/colorPrimary"
                                        app:layout_constraintBottom_toBottomOf="parent"
                                        app:layout_constraintTop_toTopOf="parent"
                                        app:layout_constraintEnd_toEndOf="parent"
                                        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout android:layout_width="match_parent"
                      android:orientation="vertical"
                      android:layout_height="match_parent"
                      android:padding="16dp">

            <TextView
                    android:textSize="24sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/whatsapp_login_header"
                    android:layout_marginBottom="16dp"/>

            <EditText
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/fire_email"
                    android:inputType="textEmailAddress"/>

            <EditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/fire_password"
                    android:inputType="textPassword"
                    tools:text="12345"/>

            <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/whatsapp_login"
                    android:layout_gravity="bottom|end"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>