<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:background="@drawable/background"
        android:layout_height="match_parent"
        tools:context=".whatsapp.WhatsappMainActivity">

    <ImageView
            app:srcCompat="@drawable/ic_chat_bubble"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/imageView"/>

    <TextView
            android:text="@string/whatsapp_welcome"
            android:layout_width="match_parent"
            android:textColor="@color/textWhite"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/textView"
            android:layout_margin="50dp"
            app:layout_constraintTop_toBottomOf="@id/imageView"
            tools:layout_editor_absoluteY="208dp"/>

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent">

        <Button
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/whatsapp_login"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/TextAppearance.AppCompat.Button"/>

        <Button
                android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/btnLogin"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:text="@string/whatsapp_register"
                android:textColor="@color/textWhite"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"/>
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>